--- a/smart-on-fhir/workshops/freetier/manifest.json
+++ b/smart-on-fhir/workshops/freetier/manifest.json
@@ -16,7 +16,7 @@
         },
         {
             "title": "Lab 1: Sign up for an APEX Workspace",
-            "filename": "../common-latest/1-sign-up-apex/1-sign-up-apex.md"
+            "filename": "../../../common-latest/1-sign-up-apex/1-sign-up-apex.md"
         },
         {
             "title": "Lab 2: APEX Application Setup",
