--- a/smart-on-fhir/workshops/tenancy/manifest.json
+++ b/smart-on-fhir/workshops/tenancy/manifest.json
@@ -1,10 +1,7 @@
 {
-    "workshoptitle": "The Title of the Workshop is Defined in the Manifest File",
-    "include": {"starter-file.sql":"../../data-load/files/starter-file.sql",
-                "sample.json":"../../data-load/files/sample.json",
-                "step2.md":"../../data-load/files/step2.md"},
-    "variables": ["../../variables/variables.json",
-                 "../../variables/variables-in-another-file.json"],
+    "workshoptitle": "Building an SMART on FHIR App using Oracle Autonomous Cloud Services",
+    "include": {"starter-file.sql":"../../2-apex-app-setup/files/starter-file.sql",
+                "sample.json":"../../3-code-console/files/sample.json"},
     "help": "livelabs-help-**enterarea**_us@oracle.com",
     "tutorials": [
         {
@@ -18,29 +15,20 @@
             "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
         },
         {
-            "title": "Lab 1: Provision an Instance",
-            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
-            "filename": "../../provision/provision.md"
+            "title": "Lab 1: Sign up for an APEX Workspace",
+            "filename": "../../../common-latest/1-sign-up-apex/1-sign-up-apex.md"
         },
         {
-            "title": "Lab 2: Setup the Environment",
-            "filename": "../../setup/setup.md"
+            "title": "Lab 2: APEX Application Setup",
+            "filename": "../../2-apex-app-setup/apex-app-setup.md"
         },
         {
-            "title": "Lab 3: Load Data into an Instance",
-            "filename": "../../data-load/data-load.md"
+            "title": "Lab 3: Sign up for Code Console ",
+            "filename": "../../3-code-console/code-console.md"
         },
         {
-            "title": "Lab 4: Query Data",
-            "filename": "../../query/query.md"
-        },
-        {
-            "title": "Lab 5: Tables in LiveLabs",
-            "filename": "../../tables/tables.md"
-        },
-        {
-            "title": "Lab 6: Variables in LiveLabs",
-            "filename": "../../variables/variables.md"
+            "title": "Lab 4: APEX Business logic",
+            "filename": "../../4-apex-logic/apex-logic.md"
         },
         {
             "title": "Need Help?",
