--- a/smart-on-fhir/workshops/tenancy/manifest.json
+++ b/smart-on-fhir/workshops/tenancy/manifest.json
@@ -11,7 +11,7 @@
         },
         {
             "title": "Lab 1: Sign up for an APEX Workspace",
-            "filename": "../../../common-latest/1-sign-up-apex/1-sign-up-apex.md"
+            "filename": " https://oracle-livelabs.github.io/apex/common-latest/1-sign-up-apex/1-sign-up-apex.md"
         },
         {
             "title": "Lab 2: APEX Application Setup",
