--- a/smart-on-fhir/workshops/freetier/manifest.json
+++ b/smart-on-fhir/workshops/freetier/manifest.json
@@ -22,7 +22,7 @@
             "filename": "../../3-code-console/code-console.md"
         },
         {
-            "title": "Lab 4: ASCVD Risk Calculator",
+            "title": "Lab 4: Creating an ASCVD Risk Calculator",
             "filename": "../../4-apex-logic/apex-logic.md"
         },
         {
