second part of lab 4

--- a/smart-on-fhir/workshops/freetier/manifest.json
+++ b/smart-on-fhir/workshops/freetier/manifest.json
@@ -21,7 +21,7 @@
             "filename": "../../3-code-console/code-console.md"
         },
         {
-            "title": "Lab 4: Create an ASCVD Risk Calculator",
+            "title": "Lab 4: Create ASCVD Risk Calculator",
             "filename": "../../4-apex-logic/apex-logic.md"
         },
         {
