--- a/smart-on-fhir/workshops/freetier/manifest.json
+++ b/smart-on-fhir/workshops/freetier/manifest.json
@@ -1,7 +1,7 @@
 {
     "workshoptitle": "Build a SMART on FHIR Application with Oracle Autonomous Cloud Services",
-    "include": {"ASCVDRisk.sql":"../../2-introduction/files/ASCVDRisk.sql",
-    "ASCVDRisk.min.js":"../../2-introduction/files/ASCVDRisk.min.js",
+    "include": {"ascvd-risk.sql":"../../2-introduction/files/ascvd-risk.sql",
+    "ascvd-risk.min.js":"../../2-introduction/files/ascvd-risk.min.js",
     "fhir-client.min.js":"../../2-introduction/files/fhir-client.min.js"},
     "help": "livelabs-help_us@oracle.com",
     "tutorials": [
