--- a/smart-on-fhir/workshops/tenancy/manifest.json
+++ b/smart-on-fhir/workshops/tenancy/manifest.json
@@ -10,7 +10,7 @@
             "filename": "../../0-introduction/introduction.md"
         },
         {
-            "title": "Lab 1: Sign up for an APEX Workspace",
+            "title": "Lab 1: Sign Up for an APEX Workspace",
             "filename": "https://oracle-livelabs.github.io/apex/common-latest/1-sign-up-apex/1-sign-up-apex.md"
         },
         {
@@ -18,7 +18,7 @@
             "filename": "../../2-apex-app-setup/apex-app-setup.md"
         },
         {
-            "title": "Lab 3: Sign up for Code Console ",
+            "title": "Lab 3: Sign Up for Code Console ",
             "filename": "../../3-code-console/code-console.md"
         },
         {
