--- a/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
+++ b/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "Generate Compliance Submission Documents with OCI Generative AI",
+    "workshoptitle": "Generate Regulatory documents for Compliance submission Documents with OCI Generative AI",
     "help": "livelabs-help-**enterarea**_us@oracle.com",
     "tutorials": [
         {
