--- a/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
+++ b/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
@@ -1,6 +1,6 @@
 {
     "workshoptitle": "Generate Regulatory documents for Compliance submission Documents with OCI Generative AI",
-    "help": "livelabs-help-**enterarea**_us@oracle.com",
+    "help": "livelabs-help-oci_us@oracle.com",
     "tutorials": [
         {
             "title": "Introduction",
