changedall filenames to lowercase as per standards

--- a/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
+++ b/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
@@ -35,7 +35,7 @@
             "filename": "../../generate-compliance-document/generate-compliance-document.md"
         },
         {
-            "title": "LAB 6: LAB-6 Using Neural and Hybrid search (Optional)",
+            "title": "LAB 6: Using Neural and Hybrid search (Optional)",
             "filename": "../../using-neural-and-hybrid-search/using-neural-and-hybrid-search.md"
         },
         {
