Minor format fixes

--- a/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
+++ b/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
@@ -23,7 +23,7 @@
             "filename": "../../generate-clinical-trials-with-oci-gai/generate-clinical-trials-with-oci-gai.md"
         },
         {
-            "title": "LAB-3 Developing with OCI Data science",
+            "title": "LAB-3 Develop with OCI Data science",
             "filename": "../../developing-with-oci-data-science/developing-with-oci-data-science.md"
         },
         {
@@ -35,7 +35,7 @@
             "filename": "../../generate-compliance-document/generate-compliance-document.md"
         },
         {
-            "title": "LAB 6: Using Neural and Hybrid search (Optional)",
+            "title": "LAB 6: Use Neural and Hybrid search (Optional)",
             "filename": "../../using-neural-and-hybrid-search/using-neural-and-hybrid-search.md"
         },
         {
