--- a/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
+++ b/compliance-form-generation-with-OCI-GenAI/workshops/tenancy/manifest.json
@@ -23,15 +23,15 @@
             "filename": "../../generate-clinical-trials-with-oci-gai/generate-clinical-trials-with-oci-gai.md"
         },
         {
-            "title": "Lab-3 Develop with OCI Data science",
+            "title": "Lab 3: Develop with OCI Data science",
             "filename": "../../developing-with-oci-data-science/developing-with-oci-data-science.md"
         },
         {
-            "title": "Lab-4 Vectorize, load and evaluate",
+            "title": "Lab 4: Vectorize, load and evaluate",
             "filename": "../../vectorize-load-and-evaluate/vectorize-load-and-evaluate.md"
         },
         {
-            "title": "Lab-5 Generate Compliance document",
+            "title": "Lab 5: Generate Compliance document",
             "filename": "../../generate-compliance-document/generate-compliance-document.md"
         },
         {
